# ocaml-syntax-highlight

./: dune-project  textmate.opam  textmate.opam.template
example/: Generate.re  GrammarInfo.re  GrammarRepository.re  ThemeInfo.re  ThemeRepository.re  TokenTheme.re  dune  index.css  index.html  test.md
reason-oniguruma/: dune
src/: Grammar.re  Pattern.re  Theme.re  ThemeRepository.re  ThemeScopes.re  TokenTheme.re  dune
test/: FixtureTests.re  Test.re  TokenThemeTests.re  TrieTests.re  dune
